[package]
name = "voxport"
version = "0.1.0"
authors = ["Matthew Henderson <mattw2018@hotmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dot_vox = "4.1.0"
stl_io = "0.5.2"

[dependencies.clap]
version = "3.0.0-beta.2"

[dependencies.collada_io]
path = "../collada-io"