[package]
name = "voxport"
description = "Simple tool for converting MagicaVoxel files"
homepage = "https://github.com/5mattmatt1/voxport"
repository = "https://github.com/5mattmatt1/voxport"
readme = "README.md"
version = "0.1.0"
authors = ["Matthew Henderson <mattw2018@hotmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["stl", "collada", "dae", "vox", "voxel", "3d", "mesh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dot_vox = "4.1.0"
stl_io = "0.5.2"

[dependencies.clap]
version = "3.0.0-beta.2"

[dependencies.collada_io]
git = "https://github.com/5mattmatt1/collada_io.git"
branch = "main"
version = "0.1.0"